src/x502api.h


typedef enum {
    X502_ERR_OK                           = 0,
    X502_ERR_INVALID_HANDLE               = -1,
    X502_ERR_MEMORY_ALLOC                 = -2,
    X502_ERR_ALREADY_OPENED               = -3,
    X502_ERR_DEVICE_NOT_FOUND             = -4,
    X502_ERR_DEVICE_ACCESS_DENIED         = -5,
    X502_ERR_DEVICE_OPEN                  = -6,
    X502_ERR_INVALID_POINTER              = -7,
    X502_ERR_STREAM_IS_RUNNING            = -8,
    X502_ERR_RECV                         = -9,
    X502_ERR_SEND                         = -10,
    X502_ERR_STREAM_OVERFLOW              = -11,
    X502_ERR_UNSUP_STREAM_MSG             = -12,
    X502_ERR_MUTEX_CREATE                 = -13,
    X502_ERR_MUTEX_INVALID_HANDLE         = -14,
    X502_ERR_MUTEX_LOCK_TOUT              = -15,
    X502_ERR_MUTEX_RELEASE                = -16,
    X502_ERR_INSUFFICIENT_SYSTEM_RESOURCES= -17,
    X502_ERR_NOT_IMPLEMENTED              = -18,
    X502_ERR_INSUFFICIENT_ARRAY_SIZE      = -19,
    X502_ERR_FPGA_REG_READ                = -20,
    X502_ERR_FPGA_REG_WRITE               = -21,
    X502_ERR_STREAM_IS_NOT_RUNNING        = -22,
    X502_ERR_INTERFACE_RELEASE            = -23,
    X502_ERR_THREAD_START                 = -24,
    X502_ERR_THREAD_STOP                  = -25,
    X502_ERR_DEVICE_DISCONNECTED          = -26,
    X502_ERR_IOCTL_INVALID_RESP_SIZE      = -27,
    X502_ERR_INVALID_DEVICE               = -28,
    X502_ERR_INVALID_DEVICE_RECORD        = -29,
    X502_ERR_INVALID_CONFIG_HANDLE        = -30,
    X502_ERR_DEVICE_NOT_OPENED            = -31,
    X502_ERR_INVALID_OP_FOR_IFACE         = -32,
    X502_ERR_FPGA_NOT_LOADED              = -33,
    X502_ERR_INVALID_USB_CONFIGURATION    = -34,    
    X502_ERR_INVALID_SVC_BROWSE_HANDLE    = -35,
    X502_ERR_INVALID_SVC_RECORD_HANDLE    = -36,
    X502_ERR_DNSSD_NOT_RUNNING            = -37,
    X502_ERR_DNSSD_COMMUNICATION          = -38,
    X502_ERR_SVC_RESOLVE_TIMEOUT          = -39,
    X502_ERR_INSTANCE_NAME_ENCODING       = -40,
    X502_ERR_INSTANCE_MISMATCH            = -41,
    X502_ERR_NOT_SUP_BY_FIRMWARE          = -42,
    X502_ERR_NOT_SUP_BY_DRIVER            = -43,
    X502_ERR_OUT_CYCLE_SETUP_TOUT         = -44,
    X502_ERR_UNKNOWN_FEATURE_CODE         = -45,
    X502_ERR_INVALID_LTABLE_SIZE          = -102,
    X502_ERR_INVALID_LCH_NUMBER           = -103,
    X502_ERR_INVALID_LCH_RANGE            = -104,
    X502_ERR_INVALID_LCH_MODE             = -105,
    X502_ERR_INVALID_LCH_PHY_NUMBER       = -106,
    X502_ERR_INVALID_LCH_AVG_SIZE         = -107,
    X502_ERR_INVALID_ADC_FREQ_DIV         = -108,
    X502_ERR_INVALID_DIN_FREQ_DIV         = -109,
    X502_ERR_INVALID_MODE                 = -110,
    X502_ERR_INVALID_DAC_CHANNEL          = -111,
    X502_ERR_INVALID_REF_FREQ             = -112,
    X502_ERR_INVALID_INTERFRAME_DELAY     = -113,
    X502_ERR_INVALID_SYNC_MODE            = -114,
    X502_ERR_INVALID_STREAM_CH            = -115,
    X502_ERR_INVALID_OUT_FREQ_DIV         = -116,
    X502_ERR_REF_FREQ_NOT_LOCKED          = -131,
    X502_ERR_IOCTL_FAILD                  = -132,
    X502_ERR_IOCTL_TIMEOUT                = -133,
    X502_ERR_GET_INFO                     = -134,
    X502_ERR_DIG_IN_NOT_RDY               = -135,
    X502_ERR_RECV_INSUFFICIENT_WORDS      = -136,
    X502_ERR_DAC_NOT_PRESENT              = -137,
    X502_ERR_SEND_INSUFFICIENT_WORDS      = -138,
    X502_ERR_NO_CMD_RESPONSE              = -139,
    X502_ERR_PROC_INVALID_CH_NUM          = -140,
    X502_ERR_PROC_INVALID_CH_RANGE        = -141,
    X502_ERR_FLASH_INVALID_ADDR           = -142,
    X502_ERR_FLASH_INVALID_SIZE           = -143,
    X502_ERR_FLASH_WRITE_TOUT             = -144,
    X502_ERR_FLASH_ERASE_TOUT             = -145,
    X502_ERR_FLASH_SECTOR_BOUNDARY        = -146,
    X502_ERR_SOCKET_OPEN                  = -147,
    X502_ERR_CONNECTION_TOUT              = -148,
    X502_ERR_CONNECTION_CLOSED_BY_DEV     = -149,
    X502_ERR_SOCKET_SET_BUF_SIZE          = -150,
    X502_ERR_NO_DATA_CONNECTION           = -151,
    X502_ERR_NO_STREAM_END_MSG            = -152,
    X502_ERR_CONNECTION_RESET             = -153,
    X502_ERR_HOST_UNREACHABLE             = -154,
    X502_ERR_TCP_CONNECTION_ERROR         = -155,
    X502_ERR_LDR_FILE_OPEN                = -180,
    X502_ERR_LDR_FILE_READ                = -181,
    X502_ERR_LDR_FILE_FORMAT              = -182,
    X502_ERR_LDR_FILE_UNSUP_FEATURE       = -183,
    X502_ERR_LDR_FILE_UNSUP_STARTUP_ADDR  = -184,
    X502_ERR_BF_REQ_TIMEOUT               = -185,
    X502_ERR_BF_CMD_IN_PROGRESS           = -186,
    X502_ERR_BF_CMD_TIMEOUT               = -187,
    X502_ERR_BF_CMD_RETURN_INSUF_DATA     = -188,
    X502_ERR_BF_LOAD_RDY_TOUT             = -189,
    X502_ERR_BF_NOT_PRESENT               = -190,
    X502_ERR_BF_INVALID_ADDR              = -191,
    X502_ERR_BF_INVALID_CMD_DATA_SIZE     = -192
} t_x502_errs;
typedef struct st_x502_devrec_inptr t_x502_devrec_inptr;
typedef struct {
    uint32_t sign;  
    char devname[X502_DEVNAME_SIZE]; 
    char serial[X502_SERIAL_SIZE]; 
    char location[X502_LOCATION_STR_SIZE]; 
    uint32_t flags; 
    uint8_t  iface; 
    uint8_t  location_type; 
    char res[122];  
    t_x502_devrec_inptr* internal; 
} t_x502_devrec;
typedef struct st_x502* t_x502_hnd;
typedef char (*t_x502_serial_list)[X502_SERIAL_SIZE];
typedef struct {
    t_x502_cbr_coef adc[X502_ADC_RANGE_CNT];
    uint32_t res1[64]; 
    t_x502_cbr_coef dac[X502_DAC_CH_CNT];
    uint32_t res2[20]; 
} t_x502_cbr;
typedef struct {
    char name[X502_DEVNAME_SIZE]; 
    char serial[X502_SERIAL_SIZE]; 
    uint32_t devflags; 
    uint16_t fpga_ver; 
    uint8_t  plda_ver; 
    uint8_t  board_rev; 
    uint32_t mcu_firmware_ver; 
    uint8_t  factory_mac[X502_MAC_ADDR_SIZE]; 
    uint8_t res[110]; 
    t_x502_cbr cbr; 
} t_x502_info;
X502_EXPORT(int32_t) X502_OpenByDevRecord(t_x502_hnd hnd, const t_x502_devrec *devrec);
X502_EXPORT(int32_t) X502_FreeDevRecordList(t_x502_devrec *list, uint32_t size);
X502_EXPORT(int32_t) X502_Close(t_x502_hnd hnd);
X502_EXPORT(int32_t) X502_GetDevInfo(t_x502_hnd hnd, t_x502_info* info);
X502_EXPORT(int32_t) X502_Configure(t_x502_hnd hnd, uint32_t flags);
X502_EXPORT(int32_t) X502_SetLChannel(t_x502_hnd hnd, uint32_t lch, uint32_t phy_ch,
                                       uint32_t mode, uint32_t range, uint32_t avg);
X502_EXPORT(int32_t) X502_SetLChannelCount(t_x502_hnd hnd, uint32_t lch_cnt);
X502_EXPORT(int32_t) X502_GetLChannelCount(t_x502_hnd hnd, uint32_t* lch_cnt);
X502_EXPORT(int32_t) X502_SetAdcFreqDivider(t_x502_hnd hnd, uint32_t adc_freq_div);
X502_EXPORT(int32_t) X502_SetAdcInterframeDelay(t_x502_hnd hnd, uint32_t delay);
X502_EXPORT(int32_t) X502_SetDinFreqDivider(t_x502_hnd hnd, uint32_t din_freq_div);
X502_EXPORT(int32_t) X502_SetOutFreqDivider(t_x502_hnd hnd, uint32_t out_freq_div);
X502_EXPORT(int32_t) X502_SetAdcFreq(t_x502_hnd hnd, double *f_acq, double *f_frame);
X502_EXPORT(int32_t) X502_SetDinFreq(t_x502_hnd hnd, double *f_din);
X502_EXPORT(int32_t) X502_SetOutFreq(t_x502_hnd hnd, double *f_dout);
X502_EXPORT(int32_t) X502_GetAdcFreq(t_x502_hnd hnd, double *f_acq, double *f_frame);
X502_EXPORT(int32_t) X502_SetRefFreq(t_x502_hnd hnd, uint32_t freq);
X502_EXPORT(int32_t) X502_SetExtRefFreqValue(t_x502_hnd hnd, double freq);
X502_EXPORT(int32_t) X502_GetRefFreqValue(t_x502_hnd hnd, double *freq);
X502_EXPORT(int32_t) X502_SetSyncMode(t_x502_hnd hnd, uint32_t sync_mode);
X502_EXPORT(int32_t) X502_SetSyncStartMode(t_x502_hnd hnd, uint32_t sync_start_mode);
X502_EXPORT(int32_t) X502_SetMode(t_x502_hnd hnd, uint32_t mode);
X502_EXPORT(int32_t) X502_GetMode(t_x502_hnd hnd, uint32_t* mode);
X502_EXPORT(int32_t) X502_SetAdcCoef(t_x502_hnd hnd, uint32_t range, double k, double offs);
X502_EXPORT(int32_t) X502_GetAdcCoef(t_x502_hnd hnd, uint32_t range, double* k, double* offs);
X502_EXPORT(int32_t) X502_SetDacCoef(t_x502_hnd hnd, uint32_t ch, double k, double offs);
X502_EXPORT(int32_t) X502_GetDacCoef(t_x502_hnd hnd, uint32_t ch, double* k, double* offs);
X502_EXPORT(int32_t) X502_CalcAdcFreq(double ref_freq, uint32_t lch_cnt, double *f_acq,
                                      double *f_frame, uint32_t *result_freq_div, uint32_t *result_frame_delay);
X502_EXPORT(int32_t) X502_CalcDinFreq(double ref_freq, double *f_din, uint32_t *result_freq_div);
X502_EXPORT(int32_t) X502_CalcOutFreq(double ref_freq, double *f_dout, uint32_t *result_freq_div);
X502_EXPORT(int32_t) X502_AsyncOutDac(t_x502_hnd hnd, uint32_t ch, double data, uint32_t flags);
X502_EXPORT(int32_t) X502_AsyncOutDig(t_x502_hnd hnd, uint32_t val, uint32_t msk);
X502_EXPORT(int32_t) X502_AsyncInDig(t_x502_hnd hnd, uint32_t* din);
X502_EXPORT(int32_t) X502_AsyncGetAdcFrame(t_x502_hnd hnd, uint32_t flags,
                                       uint32_t tout, double* data);
X502_EXPORT(int32_t) X502_StreamsEnable(t_x502_hnd hnd, uint32_t streams);
X502_EXPORT(int32_t) X502_StreamsDisable(t_x502_hnd hnd, uint32_t streams);
X502_EXPORT(int32_t) X502_GetEnabledStreams(t_x502_hnd hnd, uint32_t* streams);
X502_EXPORT(int32_t) X502_StreamsStart(t_x502_hnd hnd);
X502_EXPORT(int32_t) X502_StreamsStop(t_x502_hnd hnd);
X502_EXPORT(int32_t) X502_IsRunning(t_x502_hnd hnd);
X502_EXPORT(int32_t) X502_Recv(t_x502_hnd hnd, uint32_t* buf, uint32_t size, uint32_t tout);
X502_EXPORT(int32_t) X502_Send(t_x502_hnd hnd, const uint32_t* buf, uint32_t size, uint32_t tout);
X502_EXPORT(int32_t) X502_ProcessAdcData(t_x502_hnd hnd, const uint32_t* src,
                                          double *dest, uint32_t *size, uint32_t flags);
X502_EXPORT(int32_t) X502_ProcessData(t_x502_hnd hnd, const uint32_t* src, uint32_t size,
                     uint32_t flags, double *adc_data, uint32_t *adc_data_size,
                     uint32_t *din_data, uint32_t *din_data_size);
X502_EXPORT(int32_t) X502_ProcessDataWithUserExt(t_x502_hnd hnd, const uint32_t* src, uint32_t size,
                                   uint32_t flags, double *adc_data,
                                   uint32_t *adc_data_size, uint32_t *din_data,
                                   uint32_t *din_data_size,
                                   uint32_t *usr_data, uint32_t *usr_data_size);
X502_EXPORT(int32_t) X502_PrepareData(t_x502_hnd hnd, const double* dac1, const double* dac2,
                            const uint32_t* digout, uint32_t size, int32_t flags,
                            uint32_t* out_buf);
X502_EXPORT(int32_t) X502_GetRecvReadyCount(t_x502_hnd hnd, uint32_t *rdy_cnt);
X502_EXPORT(int32_t) X502_GetSendReadyCount(t_x502_hnd hnd, uint32_t *rdy_cnt);
X502_EXPORT(int32_t) X502_GetNextExpectedLchNum(t_x502_hnd hnd, uint32_t *lch);
X502_EXPORT(int32_t) X502_PreloadStart(t_x502_hnd hnd);
X502_EXPORT(int32_t) X502_OutCycleLoadStart(t_x502_hnd hnd, uint32_t size);
X502_EXPORT(int32_t) X502_OutCycleSetup(t_x502_hnd hnd, uint32_t flags);
X502_EXPORT(int32_t) X502_OutCycleStop(t_x502_hnd hnd, uint32_t flags);
X502_EXPORT(int32_t) X502_OutCycleCheckSetupDone(t_x502_hnd hnd, uint32_t *done);
X502_EXPORT(int32_t) X502_OutGetStatusFlags(t_x502_hnd hnd, uint32_t *status);
X502_EXPORT(int32_t) X502_SetStreamBufSize(t_x502_hnd hnd, uint32_t ch, uint32_t size);
X502_EXPORT(int32_t) X502_SetStreamStep(t_x502_hnd hnd, uint32_t dma_ch, uint32_t step);
X502_EXPORT(int32_t) X502_BfLoadFirmware(t_x502_hnd hnd, const char* filename);
X502_EXPORT(int32_t) X502_BfCheckFirmwareIsLoaded(t_x502_hnd hnd, uint32_t *version);
X502_EXPORT(int32_t) X502_BfMemRead(t_x502_hnd hnd, uint32_t addr, uint32_t* regs,
                                      uint32_t size);
X502_EXPORT(int32_t) X502_BfMemWrite(t_x502_hnd hnd, uint32_t addr,
                                      const uint32_t* regs, uint32_t size);
X502_EXPORT(int32_t) X502_BfExecCmd(t_x502_hnd hnd, uint16_t cmd_code, uint32_t par,
                                    const uint32_t* snd_data, uint32_t snd_size,
                                    uint32_t* rcv_data, uint32_t rcv_size,
                                    uint32_t tout, uint32_t* recvd_size);
X502_EXPORT(int32_t) X502_FlashRead(t_x502_hnd hnd, uint32_t addr, uint8_t* data,
                                    uint32_t size);
X502_EXPORT(int32_t) X502_FlashWrite(t_x502_hnd hnd, uint32_t addr,
                                     const uint8_t* data, uint32_t size);
X502_EXPORT(int32_t) X502_FlashErase(t_x502_hnd hnd, uint32_t addr, uint32_t size);
X502_EXPORT(int32_t) X502_FlashWriteEnable(t_x502_hnd hnd);
X502_EXPORT(int32_t) X502_FlashWriteDisable(t_x502_hnd hnd);
X502_EXPORT(uint32_t) X502_GetLibraryVersion(void);
X502_EXPORT(const char*) X502_GetErrorString(int32_t err);
X502_EXPORT(int32_t) X502_LedBlink(t_x502_hnd hnd);
X502_EXPORT(int32_t) X502_SetDigInPullup(t_x502_hnd hnd, uint32_t pullups);
X502_EXPORT(int32_t) X502_CheckFeature(t_x502_hnd hnd, uint32_t feature);